chore: AI code quality improvements via Claude [skip ci]